2024/kubernetes/customer-resource.yaml
apiVersion: v1
kind: Pod
metadata:
    name: customer-resource
spec:
    containers:
        - image: $ACCOUNT_ID.dkr.ecr.us-west-2.amazonaws.com/customer
          name: customer
          ports:
              - containerPort: 8080
                protocol: TCP
          resources:
              requests:
                  memory: "64Mi"
                  cpu: "250m"
              limits:
                  memory: "128Mi"
                  cpu: "500m"
