2024/kubernetes/customer.yaml
apiVersion: v1
kind: Pod
metadata:
  name: customer
spec:
  containers:
  - image: $ACCOUNT_ID.dkr.ecr.us-west-2.amazonaws.com/customer
	  name: customer
		ports:
		- containerPort: 8080
			protocol: TCP
