2024/kubernetes/ubuntu-pod.yaml
apiVersion: v1
kind: Pod
metadata:
    name: pod-resource-limit
spec:
    containers:
      - image: ubuntu:22.04 
        name: pod-resource-limit
        command: ["sleep", "infinity"]
        resources:
            requests:
                memory: "256Mi"
                cpu: "500m"
            limits:
                memory: "512Mi"
                cpu: "1"
