2024/kubernetes/coffee-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: coffee-ingress
    annotations:
        kubernetes.io/ingress.class: alb
        alb.ingress.kubernetes.io/scheme: internet-facing
spec:
    rules:
        - http:
              paths:
                  - path: /customer
                    pathType: Prefix
                    backend:
                        service:
                            name: customer
                            port:
                                number: 8080
                  - path: /admin
                    pathType: Prefix
                    backend:
                        service:
                            name: employee
                            port:
                                number: 8080
